--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "animate.css": "^4.1.1",
     "aos": "^2.3.4",
     "axios": "^1.9.0",
+    "bootstrap": "^5.3.8",
     "jwt-decode": "^4.0.0",
     "mui-phone-number": "^3.0.3",
     "react": "^19.1.0",
